ticket/da2/da29da3f08a74e480b4db7f51bfcef0bf1676b7f/a0ff627305f34cb26062fad4a4c26bd9626ae5d9.log
/c/wxWidgets-3.0.0/mingw/bk-deps g++ -c -o basedll_wxcrt.o -I./.pch/wxprec_basedll -D__WXMSW__      -DWXBUILDING -I/c/wxWidgets-3.0.0/mingw/src/tiff/libtiff -I../src/tiff/libtiff -I../src/jpeg -I../src/png -I../src/zlib -I../src/regex -I../src/expat/lib -DwxUSE_GUI=0 -DWXMAKINGDLL_BASE -DwxUSE_BASE=1  -Wall -Wundef -Wunused-parameter -Wno-ctor-dtor-privacy -Woverloaded-virtual -D_LARGEFILE_SOURCE=unknown -I/c/wxWidgets-3.0.0/mingw/lib/wx/include/msw-unicode-3.0 -I../include -DWX_PRECOMP -mthreads -g -O0  ../src/common/wxcrt.cpp
../src/common/wxcrt.cpp: In function 'int wxVsprintf(wchar_t*, const wxString&, va_list)':
../src/common/wxcrt.cpp:663:47: error: invalid conversion from 'const wchar_t*' to 'size_t {aka unsigned int}' [-fpermissive]
     return wxCRT_VsprintfW(str, format.wc_str(), argptr);
                                               ^
../src/common/wxcrt.cpp:663:56: error: cannot convert 'va_list {aka char*}' to 'const wchar_t*' for argument '3' to 'int vswprintf(wchar_t*, size_t, const wchar_t*, char*)'
     return wxCRT_VsprintfW(str, format.wc_str(), argptr);
                                                        ^
../src/common/wxcrt.cpp:673:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [basedll_wxcrt.o] Error 1
